# jupiter

./: README.md
emma/: README.md
emma/src/emma/: .gitignore  CMakeLists.txt  README.md  manifest.xml
emma/src/emma/launch/: double_astra.launch
emma/src/emma/src/: camera_fov.txt  depth_map.cpp  save_depth.cpp
emma/src/emma/src/catch_ball/: arm_to_xyz.cpp  arm_to_xyz.h  camera_to_arm.cpp  camera_to_arm.h  camera_to_xyz.cpp  camera_to_xyz.h  catch_ball.cpp  find_brick.cpp  find_brick.h  jupiter_arm_kinematics.cpp  jupiter_arm_kinematics.h
emma/src/emma/src/follow_me/: follow_me.cpp
emma/src/emma/src/learning/: add_two_ints_client.cpp  add_two_ints_server.cpp  arm_to_xyz.cpp  jupiter_arm_kinematics.cpp  jupiter_arm_kinematics.h  move_arm.cpp  to_obstacle.cpp
matus/matus_showcase/: .gitignore  CMakeLists.txt  README.md  package.xml
matus/matus_showcase/launch/: arm.launch  astra.launch  demo.launch  lidar.launch  multi_astra.launch
matus/matus_showcase/msg/: ClothesMessage.msg  DetectedObstacles.msg  JointCoordinates.msg
matus/matus_showcase/raspberry_pi/jupiter/: classify_image.py  receive_image.py  static_ip_config.txt
matus/matus_showcase/raspberry_pi/jupiter/clothes/: clothes_model.tflite  clothes_model_edgetpu.tflite  clothing_labels.txt
matus/matus_showcase/scripts/: arm_coordinates_calculator.py  arm_grab.py  arm_test.py  clothing_publisher.py  coordinate_publisher.py  coordinates_calculator.py  coords_calc.py  detect_obstacles.py  find_a_cup.py  move_forward.py  opencv_convert.py  person_recognizer.py  recieve_image.py  send_image.py  speech_recognizer.py  take_picture.py  talk_back.py  voice_command_listener.py
matus/matus_showcase/tmp_audio/: readme.md
patrik/: README.md
patrik/patrik_showcase/: README.md  package.xml
patrik/patrik_showcase/launch/: demo.launch
patrik/patrik_showcase/src/: Moving_next_wall.py  forward.py  menu.py  rotate_l.py  rotate_r.py
sarah/: README.md  package.xml  start.sh
sarah/launch/: .bricks.launch.swp  bricks.launch  modified_follower.launch
sarah/src/: bring_front.sh  park.sh  put.sh  run.py  take.sh  wandering.py
sarah/tests/: Moving_next_wall.py
